--- a/imagens/macros-pgf.tex
+++ b/imagens/macros-pgf.tex
@@ -1,8 +1,9 @@
 \usepackage{pgfplots,bm}
 \usetikzlibrary{plotmarks}
 \usetikzlibrary{scopes,shapes,shadows,calc,arrows,shapes.symbols,automata,decorations.pathmorphing,backgrounds,fit,positioning}
-\usepgfplotslibrary{external}
+\usetikzlibrary{external}
 \tikzexternalize
+% \tikzexternalize[prefix=tikz2pdf/]
 
 % styles for flowcharts
 \tikzstyle{d} = [diamond, draw, text width=4.5em, text badly centered, node distance=3cm, inner sep=0pt]
@@ -180,7 +181,7 @@
 				\node (c#1) [b, right of=f#1, label=-90:$\textit{version space}$] {
   \begin{tabular}{ll}
     $\bf{x}$ que melhor define \\
-    hipÃ³teses vÃ¡lidas
+    hipóteses válidas
   \end{tabular}
 };
 				\draw[->,setatr] (a#1) -- node (1,1)[] {} (f#1);
