plot pares pronto; notar que lea é vinculado ao classif

--- a/exp-analise.tex
+++ b/exp-analise.tex
@@ -385,9 +385,16 @@ curvas de ranqueamento; tabelas um contra um e contagem de colocações; e,
 
 As curvas de ranqueamento dos dez melhores pares estratégia-aprendiz são exibidas
 na Figura \ref{}
-\input plotPares
 
-\input{arvorePares}
+\begin{figure}[!h]
+   \setlength{\unitlength}{1.0cm}
+   \centering
+     \includegraphics[scale=1]{plotPares.pdf}
+   \caption{saoldhfasdfh}
+   \label{plotPares}
+\end{figure}
+
+\input arvorePares
 
 \section{Tempo de espera tolerável (fazer se der tempo depois de ter terminado meta)}
 \ano{para o tempo não é necessário separar por classificador; basta um fried}
