--- a/tese.tex
+++ b/tese.tex
@@ -188,6 +188,9 @@
 
 \usepackage{amssymb}
 \input{imagens/macros-pgf.tex}
+\usetikzlibrary{external}
+\tikzexternalize
+
 % \usepackage{glosstex}
 \usepackage[printonlyused,withpage]{acronym}
 
