--- a/arvore.tex
+++ b/arvore.tex
@@ -8,6 +8,7 @@ outcome/.style={ shape=rectangle, fill=gray!15, draw, text width=2cm, text justi
 decision tree/.style={sibling distance=3cm, level distance=2cm},
 cond/.style={blue, yshift=-2mm, shape=rectangle, text centered},
 }
+\tikzset{external/export next=false}
 \begin{center}
 \caption{Distribuição das vitórias.
 \textit{Uma colocação entre as três melhores é contabilizada como vitória.
