--- a/plotPares.tex
+++ b/plotPares.tex
@@ -1,12 +1,10 @@
-\documentclass[12pt,twoside]{book}
+\documentclass[class=minimal,border=0pt]{standalone}
+\pagestyle{empty}
+\thispagestyle{empty}
 \usepackage[utf8]{inputenc}
 % \inputencoding{latin1}
 \input{imagens/macros-pgf.tex}
 \begin{document}
- \begin{figure}
-\caption{Curvas de ranqueamento dos pares.}
-\label{curvasrank}
-\begin{center}
 \begin{tikzpicture}[scale=1]
 \begin{axis}[xlabel=consultas, ylabel=colocação, legend style={at={(0.95,0.5)}, anchor=west}, grid = both,
 scale only axis, width=300, y dir=reverse, yticklabel style={/pgf/number format/fixed}]
@@ -121,6 +119,4 @@ scale only axis, width=300, y dir=reverse, yticklabel style={/pgf/number format/
 
 \end{axis}
 \end{tikzpicture}
-\end{center}
-\end{figure}
 \end{document}
