compilando no windows

--- a/arvore.tex
+++ b/arvore.tex
@@ -1,4 +1,6 @@
-\afterpage{\clearpage\begin{landscape}
+\afterpage{
+\clearpage
+\begin{landscape}
 \begin{figure}
 \tikzset{
 every node/.style={font=\scriptsize,black, thin},
