--- a/exp-analise.tex
+++ b/exp-analise.tex
@@ -1,4 +1,5 @@
 \section{Análise comparativa}\label{comparativa}
+My pgf version is: \pgfversion
 \esb{em todos exp, a necessidade de aplicação de filtro é separada, ex.: o learner precisa,
 mas não obriga o classif a usar ou viceversa;
 a mesma ideia foi estendida para a relação estrat-learner,
@@ -258,14 +259,15 @@ Isso é mais claramente ilustrado pelas curvas dos pares com CIELM.
 É notável que, quando usado com um algoritmo mais adequado, por exemplo,
 o RFw no casos das bases adotadas, SGmulti e Clu se tornam mais competitivos.
 
-\ano{colocar tabela fried e contagens}
-\begin{figure}[!h]
-   \setlength{\unitlength}{1.0cm}
-   \centering
-     \includegraphics[scale=1]{plotPares.pdf}
-   \caption{curvas de ranqueamento dos pares}
-   \label{plotPares}
-\end{figure}
+\input plotPares
+%\ano{colocar tabela fried e contagens}
+%\begin{figure}[!h]
+%   \setlength{\unitlength}{1.0cm}
+%   \centering
+%     \includegraphics[scale=1]{plotPares.pdf}
+%   \caption{curvas de ranqueamento dos pares}
+%   \label{plotPares}
+%\end{figure}
 
 
 % \subsection{Síntese das comparações}\label{sintese}
