--- a/plotPares.tex
+++ b/plotPares.tex
@@ -1,10 +1,10 @@
-\documentclass[class=minimal,border=0pt]{standalone}
-\pagestyle{empty}
-\thispagestyle{empty}
-\usepackage[utf8]{inputenc}
-% \inputencoding{latin1}
-\input{imagens/macros-pgf.tex}
-\begin{document}
+%\documentclass[class=minimal,border=0pt]{standalone}
+%\pagestyle{empty}
+%\thispagestyle{empty}
+%\usepackage[utf8]{inputenc}
+%% \inputencoding{latin1}
+%\input{imagens/macros-pgf.tex}
+%\begin{document}
 \begin{tikzpicture}[scale=1]
 \begin{axis}[xlabel=consultas, ylabel=colocação, legend style={at={(0.95,0.5)}, anchor=west}, grid = both,
 scale only axis, width=300, y dir=reverse, yticklabel style={/pgf/number format/fixed}]
@@ -119,4 +119,4 @@ scale only axis, width=300, y dir=reverse, yticklabel style={/pgf/number format/
 
 \end{axis}
 \end{tikzpicture}
-\end{document}
+%\end{document}
